# chemorigins

./: Dockerfile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
app/: annotate-app.py  annotate.py  config.json  explore-app.py  main.py  search-molecule-app.py  search-path-app.py
app/static/: image-buffer.db
app/templates/: agents.html  base.html  blog.html  blog_index.html  expansion.html  home.html  modules.html  modules_index.html  molecules.html  not_found.html  reactions.html  results.html  source.html
docs/: api.md  index.md  navigate.md  upload.md
prebchemdb/: __init__.py  ai.py  buffer.py  depict.py  format.py  local_mol_db.py  neoschema.py  retrieve.py  schema.py  schema_v2.py  utils.py
scratch/: image-buffer.db
scripts/: .old.update.ipynb  db_utils.py  pubchem_molecules.py  query.py
src/prebchemdb/: __init__.py
test/: test_buffer.py  test_data.json  test_db.py  test_local_mol_db.json  test_local_mol_db.py  test_queries.py  test_schema.py  test_utils.py
