[metadata]
name = prebchemdb
version = 0.0.0
author = Bruno Cuevas
author_email = cuevaszuviri@wisc.edu
description = Past, present and future of prebiotic chemistry
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = prebchemdb, scripts
python_requires = >=3.9
install_requires =
    click
    pandas
    numpy
    matplotlib
    pydantic
include_package_data = True
[options.entry_points]
console_scripts =
    ann2csv = scripts.annotation2csv:run
    mol2db = scripts.add_molecule:cli