[metadata]
name = prebchemdb
version = 0.0.1
author = Bruno Cuevas
author_email = cuevaszuviri@wisc.edu
description = Classes and functions to process PrebChemDB
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = prebchemdb, scripts
python_requires = >=3.9
install_requires =
    click
    pandas
    numpy
    matplotlib
    pydantic
    neomodel
    requests
    duckdb
    flask
include_package_data = True
[options.entry_points]
console_scripts =
    mol2db = scripts.add_molecule:cli
    prebchemdb-cli = scripts.query:cli